--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
     // google material library
-    implementation "com.google.android.material:material:1.0.0"
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.android.support:design:28.0.0-alpha1'
 
     //firebase
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
@@ -55,4 +56,8 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+
 }
