--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.thebiglosers.phix">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.activity.TransactionActivity"></activity>
+        <activity android:name=".view.activity.PaymentActivity"></activity>
+        <activity android:name=".view.activity.TransactionActivity" />
         <activity android:name=".view.activity.FirebaseLogin" />
         <activity
             android:name=".view.activity.SpashScreen"
@@ -24,5 +23,7 @@
         </activity>
         <activity android:name=".view.activity.MainActivity" />
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
