--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,13 @@ dependencies {
     // glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
 
+    //showcase
+    implementation 'com.github.AppIntro:AppIntro:5.1.0'
+
+    // shimmer loading
+    implementation 'com.github.sharish:ShimmerRecyclerView:v1.3'
+
+    // graph
+    implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
+
 }
