--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.thebiglosers.phix">
 
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.activity.PaymentActivity"></activity>
+        <activity
+            android:name=".view.activity.IntroductionActivity" />
+        <activity android:name=".view.activity.PaymentActivity" />
         <activity android:name=".view.activity.TransactionActivity" />
         <activity android:name=".view.activity.FirebaseLogin" />
         <activity
