--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:screenOrientation="portrait"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".view.activity.IntroductionActivity" />
-        <activity android:name=".view.activity.PaymentActivity" />
-        <activity android:name=".view.activity.TransactionActivity" />
-        <activity android:name=".view.activity.FirebaseLogin" />
+            android:name=".view.activity.IntroductionActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".view.activity.PaymentActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".view.activity.TransactionActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".view.activity.FirebaseLogin"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".view.activity.SpashScreen"
+            android:screenOrientation="portrait"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +31,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activity.MainActivity" />
+        <activity
+            android:name=".view.activity.MainActivity"
+            android:screenOrientation="portrait" />
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
