added user profile and parcelables

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.activity.ProfileActivity"/>
         <activity
             android:name=".view.activity.MainActivity"
             android:screenOrientation="portrait" />
